Hires tracking of ownership fn transforms

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -719,21 +719,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "is s still valid? Hello\n",
       "[fn] takes ownership of Hello\n",
-      "[fn] makes copy of 5\n"
+      "[fn] makes copy of 5\n",
+      "is x still valid? 5\n"
      ]
     }
    ],
    "source": [
     "{\n",
+    "    \n",
     "    let s = String::from(\"Hello\");  // s comes into scope\n",
+    "    println!(\"is s still valid? {}\", s);    // yes s is still in scope\n",
     "    takes_ownership(s);             // @note s's value FULLY moves into the function ...\n",
     "                                    // ... and so is NO LONBER VALID in this scope\n",
+    "\n",
+    "    // println!(\"is s still valid? {}\", s);    // error: value borrowed here after move\n",
+    "                                                // and is no longer in scope\n",
     "\n",
     "    let x = 5;                      // x comes into scope\n",
     "    makes_copy(x);                  // x would move into the function, but it's COPIED\n",
     "                                    // because i32 has a Copy (trait), so it's value\n",
     "                                    // remains at this scope and AVAILABLE for use\n",
+    "    println!(\"is x still valid? {}\", x);    // yes it is still 5 because i32 has a Copy trait\n",
+    "\n",
     "}   // After this closure :\n",
     "    // - x goes out of scope\n",
     "    // - then s ... but because it's VALUE was already moved ... \n",
@@ -748,6 +757,160 @@
     "    println!(\"[fn] makes copy of {}\", some_integer);\n",
     "}   // Here some_integer goes out of scope, but because i32 has a Copy Trait\n",
     "    // @note Nothing special happens, this closure is IDEMPOTENT\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return Value and Scope\n",
+    "\n",
+    "Returning values can also transfer ownership. Here is an example of a function  \n",
+    "that returns some value, with step by step annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[fn] gives ownership of to s1 => This is Your Book Now\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[fn] takes from s2 and gives back to s3 => Hold my Beer\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let s1 = gives_ownership(); // fn gives_ownership moves it's return value into s1\n",
+    "    println!(\"[fn] gives ownership of to s1 => {}\", s1);\n",
+    "\n",
+    "    let s2 = String::from(\"Hold my Beer\"); // s2 comes into scope\n",
+    "\n",
+    "    let s3 = takes_and_gives_back(s2);  // s2 values goes into fn ...\n",
+    "                                        // ... fn then moves it's returned value to s3\n",
+    "    // println!(\"is s2 still holding the beer {}\", s2);    // error: value borrowed here after move\n",
+    "                                                        // s2 is invalid, it's value was moved to \n",
+    "                                                        // fn ...which then moved it to s3\n",
+    "    println!(\"[fn] takes from s2 and gives back to s3 => {}\", s3);\n",
+    "\n",
+    "}   // Here s3 goes out of scope and is dropped\n",
+    "    // s2 was moved so nothing happened \n",
+    "    // s1 goes out of scope and is dropped\n",
+    "\n",
+    "fn gives_ownership() -> String {    // gives_ownership will move it's return value into the calling function\n",
+    "    let some_string = String::from(\"This is Your Book Now\");    // some_string comes into scope\n",
+    "    some_string // some_string is moved out to the calling function\n",
+    "}               // scope closes but nothing special happens\n",
+    "\n",
+    "fn takes_and_gives_back(a_string : String) -> String {  // will take ownership of a String and return a String\n",
+    "                // a_string comes into scope\n",
+    "    a_string    // a_string is moved out to the calling function\n",
+    "}               // scope closes but nothing special happens"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ownership of a variable follows the same pattern every time: \n",
+    "- assigning a value to another variable moves it. \n",
+    "- When a variable that includes data on the heap goes out of scope, the value  \n",
+    "will be cleaned up by drop unless ownership of the data has been moved to  \n",
+    "another variable.\n",
+    "\n",
+    "> @audit-ok : Drop is ONLY called on data that includes heap?\n",
+    "\n",
+    "```\n",
+    "Yes, the concept of ownership and the `Drop` trait in Rust primarily apply to  \n",
+    "data that uses the heap. When a variable with heap-allocated data goes out of  \n",
+    "scope, the `drop` function is called to clean up the resources, unless ownership  \n",
+    "has been transferred to another variable.\n",
+    "\n",
+    "For data types that are stored entirely on the stack, Rust follows a last-in,  \n",
+    "first-out (LIFO) order for cleaning up resources. When a variable goes out of  \n",
+    "scope, its memory is automatically reclaimed, and there's no need for explicit  \n",
+    "ownership management or dropping.\n",
+    "\n",
+    "However, it's important to note that even for stack-allocated data, you can use  \n",
+    "ownership and borrowing concepts to control how the data is accessed and shared  \n",
+    "across your program. This can help you write safer and more efficient code.\n",
+    "```\n",
+    "\n",
+    "While this works, taking ownership and then returning ownership with every  \n",
+    "function is a bit tedious. \n",
+    "\n",
+    "> What if we want to let a function use a value but not take ownership?  \n",
+    "It’s quite annoying that anything we pass in also needs to be passed back if we  \n",
+    "want to use it again, in addition to any data resulting from the body of the  \n",
+    "function that we might want to return as well.\n",
+    "\n",
+    "Rust does let us return multiple values using a tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of '35lb KettleBell' is 15.\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let s1 = String::from(\"35lb KettleBell\"); // s1 comes into scope\n",
+    "\n",
+    "    let (s2, len) = calculate_length(s1);   // s1 is moved into fn calculate_length\n",
+    "                                            // fn returns ownership of s1 to s2, as well as the length\n",
+    "\n",
+    "    println!(\"The length of '{}' is {}.\", s2, len); \n",
+    "\n",
+    "}   // Here s2 goes out of scope and is dropped\n",
+    "    // len goes out of scope and is dropped\n",
+    "    // s1 is already dropped because it was moved to calculate_length\n",
+    "    // so nothing special happens\n",
+    "\n",
+    "// takes ownership of a String to calculate it's length\n",
+    "// then returns ownership of the length and in String as a TUPLE\n",
+    "fn calculate_length(s: String) -> (String, usize) { // s is moved into scope\n",
+    "    // calculate the length of s\n",
+    "    let length = s.len(); // let comes into scope to store that length\n",
+    "    (s, length) // s and length are moved out to the calling function as a tuple\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> But this is too much ceremony and a lot of work for a concept that should be  \n",
+    "common. Luckily for us, Rust has a feature for using a value without  \n",
+    "transferring ownership, called references."
    ]
   },
   {
