line track Rust's Immutable Reference flow

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -908,7 +908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> But this is too much ceremony and a lot of work for a concept that should be  \n",
+    "> But this is **`too much ceremony`** and a lot of work for a concept that should be  \n",
     "common. Luckily for us, Rust has a feature for using a value without  \n",
     "transferring ownership, called references."
    ]
@@ -918,8 +918,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mutable References\n",
-    "---"
+    "References and Borrowing\n",
+    "---\n",
+    "\n",
+    "> The issue with the tuple code above ^ is that we have to return the String to  \n",
+    "the calling function so we can still use the String after the call to  \n",
+    "calculate_length, because the String was moved into calculate_length.  \n",
+    "\n",
+    "**`Instead, we can provide a reference to the String value.`**  \n",
+    "\n",
+    "A reference is like a pointer in that it’s an address we can follow to access  \n",
+    "the data stored at that address; that data is owned by some other variable.  \n",
+    "Unlike a pointer, a reference is guaranteed to point to a valid value of a  \n",
+    "particular type for the life of that reference.\n",
+    "\n",
+    "Here is how you would define and use a calculate_length function that has a  \n",
+    "reference to an object as a parameter instead of taking ownership of the value:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Immutable Reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of 'Hotel Key' is 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let s1 = String::from(\"Hotel Key\"); // s1 comes into scope\n",
+    "    // si is borrowed by calculate_length as an immutable reference (&)\n",
+    "    let len = calculate_length(&s1);\n",
+    "    // calculate_length goes out of scope ... \n",
+    "    // @audit-ok : does anything happen to s1?\n",
+    "    // ANSWER : Nothing happens to s1 because it was borrowed as an immutable ref\n",
+    "    // ... like any other var, it's up to the owner (this scope) to drop it \n",
+    "    println!(\"The length of '{}' is {}\", s1, len);\n",
+    "\n",
+    "}   // closure ends\n",
+    "    // len goes out of scope and is dropped\n",
+    "    // s1 goes out of scope and the owner (this scope) drops it\n",
+    "\n",
+    "fn calculate_length(s: &String)-> usize{ // s is an immutable ref (borrowed))\n",
+    "    s.len() // len comes into scope and is (moved) returned to the calling function\n",
+    "}   // closure ends\n",
+    "    // s goes out of scope, but since we do NOT own it, we do NOT drop it\n",
+    "    // @audit-ok what do we do instead?\n",
+    "    // ANSWER : At this scope, NOTHING : it's the OWNER's responsibility to drop it!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we pass &s1 into calculate_length and, in its definition we take : \n",
+    "- **`&String`** \n",
+    "- rather than **`String`**  \n",
+    "\n",
+    "The ampersands **`&`** represent references, and they allow you to **`refer`** to some  \n",
+    "value **`without taking ownership`** of it\n",
+    "\n",
+    "\n",
+    "<img src=\"https://doc.rust-lang.org/book/img/trpl04-05.svg\" width=50% height=50%>\n",
+    "\n",
+    "> A diagram of **`&String`** s pointing at **`String`** s1\n",
+    "\n",
+    "\n",
+    "> Note: The opposite of referencing by using & is dereferencing, which is  \n",
+    "accomplished with the dereference operator, *. \n",
+    "\n",
+    "We call the action of **`creating a reference`** == **`borrowing`**  \n",
+    "As in real life, if a person owns something, you can borrow it from them.  \n",
+    "When you’re done, you have to give it back. **`You don’t own it.`**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "cannot borrow `*some_string` as mutable, as it is behind a `&` reference",
+     "output_type": "error",
+     "traceback": [
+      "    some_string.push_str(\"Find Out\");   // Let's find out what happens if we try to change it",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `some_string` is a `&` reference, so the data it refers to cannot be borrowed as mutable",
+      "cannot borrow `*some_string` as mutable, as it is behind a `&` reference",
+      "help: consider changing this to be a mutable reference\n\n&mut String"
+     ]
+    }
+   ],
+   "source": [
+    "// So, what happens if we try to modify something we’re borrowing?\n",
+    "// Let's fiddlestick around and find out LOL\n",
+    "\n",
+    "{\n",
+    "    let s1 = String::from(\"Let's fiddlestick around and ...\"); // s1 comes into scope\n",
+    "    change(&s1);    // s1 is borrowed as an immutable ref\n",
+    "                    // ... and passed to fn change\n",
+    "                    // ... which tries to change it\n",
+    "                    // ... but it can't because it's an immutable ref\n",
+    "                    // ... so it throws an error\n",
+    "    println!(\"s1 was ONLY borrowed, it better have come back in the SAME CONDITION {}\", s1);\n",
+    "}   // closure ends\n",
+    "    // this scope owns s1, so it is our responsibility to drop it\n",
+    "\n",
+    "// Let's find out what happens when we try to MODIFY an immutable ref\n",
+    "fn change(some_string: &String){        // &some_string comes in as an IMMUTABLE BORROW\n",
+    "    some_string.push_str(\"Find Out\");   // Let's find out what happens if we try to change it\n",
+    "}   // closure ends\n",
+    "    // &some_string was borrowed, we DO NOT drop it ...\n",
+    "    // that's the RESPONSIBILITY of the OWNER\n",
+    "\n",
+    "/*\n",
+    "** ERROR **\n",
+    "error[E0596]: cannot borrow immutable borrowed content `*some_string` as mutable\n",
+    "    some_string.push_str(\"Find Out\");   // Let's find out what happens if we try to change it\n",
+    "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `some_string` is a `&` reference, so the data it refers to cannot be borrowed as mutable\n",
+    "cannot borrow `*some_string` as mutable, as it is behind a `&` reference\n",
+    "help: consider changing this to be a mutable reference\n",
+    "\n",
+    "&mut String\n",
+    " */"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`Just as variables are immutable by default, so are references.`**  \n",
+    "We’re not allowed to modify something we have a reference to."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mutable Reference\n"
    ]
   },
   {
