--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1095,44 +1095,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "hello, world\n"
+      "hello\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world\n"
+     ]
     }
    ],
    "source": [
+    "// Let's fix the error in cell 54\n",
+    "\n",
     "{\n",
     "    let mut s = String::from(\"hello\"); // s comes into scope\n",
     "    println!(\"{}\", s);\n",
     "\n",
-    "    change(&mut s);\n",
+    "    change(&mut s);     // adding the mut keyword to s signals that it is a MUTABLE REF\n",
+    "                        // ... so we can let fn change BORROW and MUTATE s\n",
     "    println!(\"{}\", s);\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fn change(some_string: &mut String){\n",
-    "    some_string.push_str(\", world\");\n",
-    "}"
+    "}   // end of closure\n",
+    "    // we OWN s, so we are responsible for dropping it\n",
+    "    // s goes out of scope and is dropped\n",
+    "\n",
+    "// Adding the mut keyword to &some_string makes it a MUTABLE REF\n",
+    "fn change(some_string: &mut String){    // now we can BORROW and MUTATE some_string\n",
+    "    some_string.push_str(\", world\");    // mutate the borrowed value\n",
+    "}   // end of closure\n",
+    "    // since we only BORROWED some_string, we DO NOT drop it\n",
+    "    // that is the responsiblity fo the OWNER \n",
+    "    // ... which is the calling function in this case"
    ]
   },
   {
