...actually mutable refs must be singular per span

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -1308,7 +1308,10 @@
     "                        // Else we risk data race where writes and read orders are not guaranteed\n",
     "                        // AND can cause undefined behavior\n",
     "\n",
-    "    // @audit-ok : This line will cause a compilation error due to the multiple borrow of s\n",
+    "    // This line will cause a compilation error due to the multiple borrow of s\n",
+    "    // - @audit-ok : the issue is that we are printing r1, r2, and r3 in the SAME CODE SPAN\n",
+    "    // - in this CODE SPAN the 2 reads and 1 write refs orders are NOT guaranteed\n",
+    "    // and as a result can cause UNDEFINED BEHAVIOR\n",
     "    println!(\"{}, {}, and {}\", r1, r2, r3);\n",
     "}   // end of closure\n",
     "    // r3 goes out of scope and is dropped, releasing it's ref\n",
@@ -1358,8 +1361,34 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`RUST's Reference Acrobatics`**\n",
+    "\n",
+    "reference read and write flows are done at very granular level CODE SPAN\n",
+    "\n",
+    "> Explain SCOPE and CODE SPAN like I am 5\n",
+    "\n",
+    "**Scope**: Imagine you have a toy box in your room. You can play with the toys  \n",
+    "only when you're in your room, and you can't play with them outside the room.  \n",
+    "In this case, your room is like the \"scope\" for your toys. It's the area where  \n",
+    "you can use and access your toys.\n",
+    "\n",
+    "**Code Span**: Now, let's say you want to play with your toys in a specific way,  \n",
+    "like building a tower with your blocks. The time you spend building the tower is  \n",
+    "like a \"code span.\" It's a specific activity or action you're doing with your  \n",
+    "toys.\n",
+    "\n",
+    "> So, the \"scope\" is like the room where you can access and use your toys, while  \n",
+    "the \"code span\" is like the individual activities or actions you do with your  \n",
+    "toys."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1370,34 +1399,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello and hello\n",
-      "hello\n"
+      "hello and hello\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
     }
    ],
    "source": [
+    "// Rust's reference acrobatics :\n",
+    "// - this code WILL compile because the last usage of the immutable reference \n",
+    "// (the println! macro) occurs BEFORE the mutable reference is introduced\n",
+    "// - @audit-ok : this GUARANTEES that there is NO RISK of r1, r2 reading STALE data from r3 writes!\n",
     "{\n",
-    "    let mut s = String::from(\"hello\");\n",
+    "    let mut s = String::from(\"hello\"); // s comes into scope as a mutable\n",
     "\n",
-    "    let r1 = &s; // no problem\n",
-    "    let r2 = &s; // no problem\n",
+    "    /* ---------- CODE SPAN - [START] ------------ */\n",
+    "    let r1 = &s; // no problem : r1 is an immutable ref to s\n",
+    "    let r2 = &s; // no problem : r2 is an immutable ref to s\n",
     "\n",
-    "    println!(\"{} and {}\", r1, r2);\n",
+    "    println!(\"{} and {}\", r1, r2); // LAST (and only) usage of r1 and r2\n",
     "    // variables r1 and r2 will not be used after this point (code span)\n",
+    "    // @audit-ok : so if s is MUTATED after this point, there is NO RISK of  \n",
+    "    // r1 and r2 using stale data\n",
+    "    /* ---------- CODE SPAN - [END] ------------ */\n",
     "\n",
-    "    let r3 = &mut s; // no problem, because this is non overlapping code span\n",
-    "    println!(\"{}\", r3);\n",
-    "}"
+    "    /* ---------- CODE SPAN - [START] ------------ */\n",
+    "    let r3 = &mut s;    // no problem, because there is no overlapping code span\n",
+    "                        // EVEN THOUGH r3 does NOT have EXCLUSIVE mutable access  to s\n",
+    "                        // @audit-ok : in this SCOPE, it has EXCLUSIVE access to s in this CODE SPAN\n",
+    "    println!(\"{}\", r3); // NO RISK of data race between r1/r2 and r3 because :\n",
+    "                        // - @audit-ok : print(r1, r2) and print(r3) are in DIFFERENT CODE SPANS\n",
+    "    /* ---------- CODE SPAN - [END] ------------ */\n",
+    "}   // closure ends\n",
+    "    // r3 goes out of scope and is dropped, releasing it's ref\n",
+    "    // r2 goes out of scope and is dropped, releasing it's ref\n",
+    "    // r1 goes out of scope and is dropped, releasing it's ref\n",
+    "    // s goes out of scope and is dropped, DEALLOCATING it's memory (heap)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> This code snippet illustrates how Rust's borrow checker ensures safe concurrency  \n",
+    "by enforcing the borrowing rules at compile time. In this example, the code  \n",
+    "compiles and runs correctly because the mutable reference `r3` is created and  \n",
+    "used after the last usage of the immutable references `r1` and `r2`.\n",
+    "  \n",
+    "This guarantees that there is no risk of data races between the references.\n",
+    "\n",
+    "The comments provided give a clear explanation of why the code is safe and how  \n",
+    "Rust's ownership and borrowing system helps to prevent data races and ensure  \n",
+    "safe concurrency."
    ]
   },
   {
